// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vue target > Button fixture 1`] = `
"<script setup lang="ts">
import { ref } from 'vue';
const { label, tone } = defineProps<{ label: any; tone?: any }>();
const pressed = ref(false);
</script>

<template>
  <button :class='pressed ? "pressed" : "idle"' @click="() => {
  pressed = true;
}">
    {{ label }}
  </button>
</template>
"
`;

exports[`Vue target > Card fixture 1`] = `
"<script setup lang="ts">
import { useSlots } from 'vue';
const slots = useSlots();
</script>

<template>
  <div class="card">
    <div v-if="slots.header" class="card-header">
      <slot name="header" />
    </div>
    <div class="card-body">
      <slot />
    </div>
    <div v-if="slots.footer" class="card-footer">
      <slot name="footer" :count="3" />
    </div>
  </div>
</template>
"
`;

exports[`Vue target > Conditional fixture 1`] = `
"<script setup lang="ts">
import { ref } from 'vue';
const isVisible = ref(false);
const count = ref(0);
</script>

<template>
  <div>
    <p v-if="isVisible">
      Content is visible
    </p>
    <p v-else>
      Content is hidden
    </p>
    <span v-if="count > 0">
      Count: 
      {{ count }}
    </span>
    <button v-if="isVisible" @click="() => {
  isVisible = false;
}">
      Hide
    </button>
    <template v-else>
      <button @click="() => {
  isVisible = true;
}">
        Show
      </button>
    </template>
    <button @click="() => {
  count = count + 1;
}">
      Increment
    </button>
  </div>
</template>
"
`;

exports[`Vue target > Counter fixture 1`] = `
"<script setup lang="ts">
import { computed, ref, watchEffect } from 'vue';
const count = ref(0);
const doubled = computed(() => count.value * 2);
watchEffect(() => {
  console.log("count is", count.value);
});
</script>

<template>
  <div>
    <p>
      {{ count }}
    </p>
    <p>
      {{ doubled }}
    </p>
    <button @click="() => {
  count = count + 1;
}">
      +1
    </button>
  </div>
</template>
"
`;

exports[`Vue target > ForLoop fixture 1`] = `
"<script setup lang="ts">
import { ref } from 'vue';
const items = ref([]);
</script>

<template>
  <ul>
    <li v-for="(item, index) in items" :key="item.id">
      {{ index + 1 }}
      . 
      {{ item.label }}
    </li>
  </ul>
</template>
"
`;

exports[`Vue target > FormField fixture 1`] = `
"<script setup lang="ts">
import { onMounted, ref, useTemplateRef } from 'vue';
const name = ref("");
const country = ref("us");
const bio = ref("");
const inputRef = useTemplateRef<HTMLInputElement>('inputRef');
onMounted(() => {
  inputRef.value?.focus();
});
</script>

<template>
  <form>
    <label>
      
        Name
        
      <input v-model="name" type="text" ref="inputRef" />
    </label>
    <label>
      
        Country
        
      <select v-model="country">
        <option value="us">
          United States
        </option>
        <option value="eu">
          European Union
        </option>
        <option value="uk">
          United Kingdom
        </option>
      </select>
    </label>
    <label>
      
        Bio
        
      <textarea v-model="bio" :rows="4" />
    </label>
  </form>
</template>
"
`;

exports[`Vue target > Lifecycle fixture 1`] = `
"<script setup lang="ts">
import { computed, onMounted, onUnmounted, ref, watchEffect } from 'vue';
const count = ref(0);
const title = ref("Inkline");
const heading = computed(() => \`\${title.value} — \${count.value}\`);
watchEffect(() => {
  const id = setInterval(() => {
  count.value = count.value + 1;
}, 1000);
  return () => clearInterval(id);
});
watchEffect(() => {
  document.title = heading.value;
});
onMounted(() => {
  document.title = heading.value;
});
onUnmounted(() => {
  document.title = "Inkline";
});
</script>

<template>
  <div>
    <h1 :style='{ fontWeight: count > 10 ? "bold" : "normal" }'>
      {{ heading }}
    </h1>
    <p>
      Count: 
      {{ count }}
    </p>
    <button @click="() => {
  count = 0;
}">
      Reset
    </button>
    <button @click='() => {
  title = "Updated";
}'>
      Change Title
    </button>
  </div>
</template>
"
`;

exports[`Vue target > List fixture 1`] = `
"<script setup lang="ts">
import { ref } from 'vue';
const items = ref([]);
</script>

<template>
  <ul>
    <li v-for="item in items" :key="item.id">
      {{ item.name }}
    </li>
  </ul>
</template>
"
`;

exports[`Vue target > SwitchTabs fixture 1`] = `
"<script setup lang="ts">
import { ref } from 'vue';
const activeTab = ref("home");
</script>

<template>
  <div>
    <nav>
      <button @click='() => {
  activeTab = "home";
}'>
        Home
      </button>
      <button @click='() => {
  activeTab = "profile";
}'>
        Profile
      </button>
      <button @click='() => {
  activeTab = "settings";
}'>
        Settings
      </button>
    </nav>
    <section v-if='activeTab === "home"'>
      <h2>
        Home
      </h2>
      <p>
        Welcome to the home page.
      </p>
    </section>
    <section v-else-if='activeTab === "profile"'>
      <h2>
        Profile
      </h2>
      <p>
        Your profile details go here.
      </p>
    </section>
    <section v-else-if='activeTab === "settings"'>
      <h2>
        Settings
      </h2>
      <p>
        Configure your preferences here.
      </p>
    </section>
    <template v-else>
      <p>
        Unknown tab.
      </p>
    </template>
  </div>
</template>
"
`;
